--- a/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
+++ b/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1179</string>
+			<string key="NS.object.0">1181</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITableViewCell</string>
@@ -43,7 +43,7 @@
 							<object class="IBUIImageView" id="254958883">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{20.5, 17}, {76, 68}}</string>
+								<string key="NSFrame">{{20, 24}, {76, 91}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="232014887"/>
@@ -54,7 +54,7 @@
 							<object class="IBUILabel" id="232014887">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{119, 16}, {177, 42}}</string>
+								<string key="NSFrame">{{119, 15}, {177, 56}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="772317120"/>
@@ -88,10 +88,9 @@
 							<object class="IBUILabel" id="772317120">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{119, 57}, {523, 29}}</string>
+								<string key="NSFrame">{{119, 71}, {511, 54}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -103,6 +102,7 @@
 								<reference key="IBUIHighlightedColor" ref="419340468"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUINumberOfLines">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">22</double>
@@ -114,7 +114,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{768, 103}</string>
+						<string key="NSFrameSize">{768, 139}</string>
 						<reference key="NSSuperview" ref="774316942"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="254958883"/>
@@ -130,7 +130,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{768, 104}</string>
+				<string key="NSFrameSize">{768, 140}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="946753982"/>
@@ -234,44 +234,9 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">CustomDiceSettingCell</string>
 					<string key="superclassName">PPTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="DiceDescriptionLabel">HKGirlFontLabel</string>
-						<string key="DiceImageView">UIImageView</string>
-						<string key="DiceTitleLabel">HKGirlFontLabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="DiceDescriptionLabel">
-							<string key="name">DiceDescriptionLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="DiceImageView">
-							<string key="name">DiceImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="DiceTitleLabel">
-							<string key="name">DiceTitleLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/CustomDiceSettingCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HKGirlFontLabel</string>
-					<string key="superclassName">FontLabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -292,6 +257,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1179</string>
+		<string key="IBCocoaTouchPluginVersion">1181</string>
 	</data>
 </archive>
